# med-rflh

./: .gitignore  main.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run_app.sh
config/: accelerate_config.yaml  ds_config.json
med_rlhf/: main.py
med_rlhf/scripts/: datapreparation.py
med_rlhf/scripts/clone/: clone_model.py
med_rlhf/scripts/delete/: delete_model.py
med_rlhf/scripts/lib/: qwen2.py
med_rlhf/scripts/test/: test_model.py
med_rlhf/scripts/train/: train_rlhf.py  train_sft.py
med_rlhf/scripts/upload/: upload_model.py
med_rlhf/scripts/utils/: flash_attn_utils.py  model_utils.py
scripts/: download_model.py  run_interface.py  train_rlhf.py  train_sft.py
