[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med_rlhf"
version = "0.1.0"
description = "Medical LLM with SFT and RLHF support"
authors = [{ name="Tao Matsumura", email="tao.dama.art@gmail.com" }]
requires-python = ">=3.11"

# 共通依存関係
dependencies = [
    "transformers==4.35.0",
    "peft",
    "accelerate",
    "datasets",
    "python-dotenv",
    "trl",
    " huggingface_hub<0.18,>=0.16.4",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "sentencepiece",
    "protobuf",
    "wandb",
    "numpy>=1.24,<2.0"
]

# オプション依存関係
[project.optional-dependencies]
cpu = [
    "torch>=2.6.0,<2.7.0"
]
gpu = [
    "torch>=2.6.0,<2.7.0",
    "bitsandbytes",
    "deepspeed",
    "triton",
    "flash-attn" 
]

# setuptools の設定
[tool.setuptools]
packages = ["med_rlhf"]

[tool.setuptools.package-data]
"med_rlhf" = ["**/*.json", "**/*.yaml", "**/*.txt"]
